fixed menu on mobile

--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -48,7 +48,7 @@ Nav Styles
   overflow-y: auto;
   width: 100%;
   height: 100%;
-  top: -20px;
+  top: -40px;
 }
 
 
